# MeshX

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Info.plist  LICENSE.md  Nodes.xml  README.md  Tokens.xml  annotated.html  classes.html  dir_0909d53c28ecf07e1a5096e591c246c0.html  dir_0909d53c28ecf07e1a5096e591c246c0.js  dir_0b362aaa802694f9d0c62fc4e93592f0.html  dir_0b362aaa802694f9d0c62fc4e93592f0.js  dir_0bd94fd843486eb9603dcf9cd6ceec5f.html  dir_0bd94fd843486eb9603dcf9cd6ceec5f.js  dir_1047139d563734670fcbc050437e13c5.html  dir_17e62e33567b93c5a1475a84b6c9c934.html  dir_1a335ee9fda428250828d4f6a007a30f.html  dir_1c8fb1a332d5375a708e5a5430cbb29d.html  dir_1c8fb1a332d5375a708e5a5430cbb29d.js  dir_2101cd0b22112584ff59816a4bc911f7.html  dir_2197ee0c1360b52aa38ae929a300cede.html  dir_26f05b192eb828a4470c1bae283fce21.html  dir_26f05b192eb828a4470c1bae283fce21.js  dir_27be9a186228c1016831de9a7f06ad68.html  dir_27be9a186228c1016831de9a7f06ad68.js  dir_310fa45c7e41c8dfdf0fcc0a2c75314a.html  dir_3322b7073cb8cf8d9a00748e79ff14c5.html  dir_3322b7073cb8cf8d9a00748e79ff14c5.js  dir_385fe5669788853ce72f948ad62511ba.html  dir_3bf68657330bb9e1ea3aa3c649cf1fe1.html  dir_3fd44edb28a884e95a2792724db37734.html  dir_3fd44edb28a884e95a2792724db37734.js  dir_41825937548e08e1bde8e06367393ca4.html  dir_50f2cef34f84d9c9b6f7bd691b9c3dca.html  dir_52ac6bdb429af1439551ebedf9752715.html  dir_564523dddebeb4985f7c9c51a725c488.html  dir_564523dddebeb4985f7c9c51a725c488.js  (+166 more)
app/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
app/components/meshx/: CMakeLists.tmp  meshx.lf
app/components/meshx/default/inc/: app_common.h  meshx.h  meshx_api.h  meshx_config copy.h  meshx_config_internal.h  meshx_control_task.h  meshx_elements.h  meshx_err.h  meshx_nvs.h  meshx_os_timer.h  meshx_txcm.h  module_id.h  os_timer.h
app/components/meshx/default/src/: composition.c  control_task.c  meshx.c  meshx_api.c  meshx_control_task.c  meshx_nvs.c  meshx_os_timer.c  meshx_txcm.c  os_timer.c
app/components/meshx/interface/: meshx_platform.h
app/components/meshx/interface/ble_mesh/: meshx_ble_mesh_cmn.h  meshx_ble_mesh_cmn_def.h  meshx_ble_mesh_config_srv.h  meshx_ble_mesh_gen_srv.h  meshx_ble_mesh_light_server.h  meshx_ble_mesh_prov_srv.h
app/components/meshx/interface/logging/: meshx_log.c  meshx_log.h
app/components/meshx/interface/rtos/: meshx_msg_q.h  meshx_rtos_timer.h  meshx_rtos_utils.h  meshx_sem.h  meshx_task.h
app/components/meshx_nvs/: meshx_nvs.c  meshx_nvs.h
app/components/os_timer/: os_timer.c  os_timer.h
app/components/unit_test/: CMakeLists.txt  README.md  unit_test.c  unit_test.h
app/elements/client/client_common/: CMakeLists.txt
app/elements/client/client_common/gen_client/: prod_client.c
app/elements/client/client_common/gen_onoff_client/: prod_onoff_client.c
app/elements/client/light_cwww_client/: light_cwww_client.c  light_cwww_client.h
app/elements/client/models/gen_onoff_client/: prod_client.c  prod_client.h  prod_onoff_client.c  prod_onoff_client.h
app/elements/client/models/light_ctl_client/: light_ctl_client.c  light_ctl_client.h
app/elements/client/switch_relay/: CMakeLists.txt  relay_client.c  relay_client_model.h
app/elements/client/switch_relay_client/: CMakeLists.txt  relay_client.c  relay_client_model.h
app/elements/client/touch_pannel/: README.md
app/elements/server/: server_common.h
app/elements/server/light_cwww_server/: cwww_server.c  cwww_server_model.h
app/elements/server/models/config_server/: config_server.c  config_server.h
app/elements/server/models/gen_onoff_server/: prod_onoff_server.c  prod_onoff_server.h
app/elements/server/models/light_ctl_server/: prod_light_ctl_srv.c  prod_light_ctl_srv.h
app/elements/server/models/provisioning/: prod_prov.c  prod_prov.h
app/elements/server/server_common/: CMakeLists.txt
app/elements/server/server_common/gen_onoff_server/: prod_onoff_server.c  prod_onoff_server.h
app/elements/server/server_common/gen_server/: prod_server.c  prod_server.h
app/elements/server/switch_relay/: CMakeLists.txt  relay_server.c
app/elements/server/switch_relay.depricated/main/: main.c  relay_server.c  relay_server_model.h
app/elements/server/switch_relay_server/: CMakeLists.txt  relay_server.c  relay_server_model.h
app/main/: CMakeLists.tmp  CMakeLists.txt  Kconfig.projbuild  board.c  board.h  idf_component.yml  main.c
app/main/common/: app_common.h  module_id.h
app/main/src/: composition.c  main.c  main.h
app/main/tasks/: control_task.c  control_task.h
app/meshx/: .gitignore  CMakeLists.tmp
app/meshx/common/: app_common.h  composition.c  meshx.c  meshx.h
app/meshx/components/meshx_nvs/: meshx_nvs.h
app/meshx/components/os_timer/: os_timer.c
app/meshx/components/tasks/: control_task.c
app/meshx/components/unit_test/: README.md
app/meshx/default/inc/: app_common.h  control_task.h  meshx.h  meshx_api.h  meshx_nvs.h
app/meshx/default/src/: composition.c  control_task.c  meshx.c  meshx_api.c  meshx_nvs.c
app/meshx/elements/client/light_cwww_client/: light_cwww_client.c  light_cwww_client.h
app/meshx/elements/client/switch_relay_client/: relay_client.c  relay_client_element.h  relay_client_model.h
app/meshx/elements/server/light_cwww_server/: cwww_server.c  cwww_server_element.h  cwww_server_model.h
app/meshx/elements/server/switch_relay_server/: relay_server.c  (+2 more)
app/prod_common/: CMakeLists.txt
app/prod_common/common/: app_common.h  codegen.h
app/prod_common/config_server/: config_server.c  config_server.h
app/prod_common/provisioning/: prod_prov.h
app/scripts/: build.sh  build_ci.sh  code_gen.py  model_profile.json  model_profile.yml  parse_sdkconfig.py  prod_profile.json  prod_profile.yml
app/sdkconfig.back/: sdkconfig.old
apps/: CMakeLists.txt
apps/component/: CMakeLists.txt
apps/component/meshx/inc/: meshx.h  meshx_common.h  meshx_config_internal.h  meshx_control_task.h  meshx_elements.h  meshx_err.h  meshx_nvs.h
apps/component/meshx/src/: meshx_api.c
apps/component/unit_test/: README.md
apps/src/: main.c
(+15318 files in other folders)
